feat: connect sidebar to P2 P3 research
